# ChangeLog for sys-devel/binutils-hppa64
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/binutils-hppa64/ChangeLog,v 1.19 2010/09/17 17:41:51 jer Exp $

  17 Sep 2010; Jeroen Roovers <jer@gentoo.org>
  binutils-hppa64-2.20.1.ebuild:
  Stable for HPPA too.

  02 Aug 2010; Jeroen Roovers <jer@gentoo.org>
  binutils-hppa64-2.20.1.ebuild:
  Mark -hppa as it cannot build a kernel (bug #330933).

*binutils-hppa64-2.20.1 (15 Jul 2010)

  15 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  +binutils-hppa64-2.20.1.ebuild:
  Version bump.

  15 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  binutils-hppa64-2.19.1.ebuild:
  Stable for HPPA too.

*binutils-hppa64-2.19.1 (29 Jan 2010)

  29 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  +binutils-hppa64-2.19.1.ebuild:
  Version bump.

  02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
  Update metadata.xml to include USE flag descriptions. Entries taken from
  profiles/use.local.desc. GLEP 56

  14 Jul 2008; Guy Martin <gmsoft@gentoo.org> binutils-hppa64-2.18.ebuild:
  Stable on hppa.

*binutils-hppa64-2.18 (18 Jun 2008)

  18 Jun 2008; Guy Martin <gmsoft@gentoo.org> +binutils-hppa64-2.18.ebuild:
  Version bump.

  27 Feb 2007; Guy Martin <gmsoft@gentoo.org>
  -binutils-hppa64-2.16.1.ebuild:
  Removed binutils-hppa64-2.16.1. See #168046.

  07 Nov 2006; Guy Martin <gmsoft@gentoo.org> binutils-hppa64-2.17.ebuild:
  Stable on hppa.

*binutils-hppa64-2.17 (27 Aug 2006)

  27 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  +binutils-hppa64-2.17.ebuild:
  Version bump.

  16 Jan 2006; Guy Martin <gmsoft@gentoo.org> binutils-hppa64-2.16.1.ebuild:
  Stable on hppa.

*binutils-hppa64-2.16.1 (08 Jan 2006)

  08 Jan 2006; Guy Martin <gmsoft@gentoo.org>
  +binutils-hppa64-2.16.1.ebuild:
  New cleaned up version.

  02 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>