@@ -1,8 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST binutils-2.19.1-patches-1.2.tar.bz2 10544 RMD160 e0b94133a8e5c248f497fd75fcf923014bce6234 SHA1 a1d805e529473d0661a40fc5cfe88aada44f7af9 SHA256 128c949a46e6c516b5ebb2dbb7be553db7d8f1ee174896d1b63adbd0950030b3
 DIST binutils-2.19.1.tar.bz2 16245771 RMD160 330089af7cb5c6b3994febe8cd2af159218bc012 SHA1 88c91e36cde93433e4c4c2b2e3417777aad84526 SHA256 3e8225b4d7ace0a2039de752e11fd6922d3b89a7259a292c347391c4788739f6
 DIST binutils-2.20.1-patches-1.1.tar.bz2 14913 RMD160 5a850d8ee3880153f614e9ef659ed4764f708538 SHA1 96900b1aab6c25b537be283102d8f44654cf0542 SHA256 aa92fc88cf1a96c88c010aa95ae788c3fd95300d93caf210301a5783266f9062
 DIST binutils-2.20.1.tar.bz2 17501436 RMD160 2ab2de504a85840d1ec227eff50b5f4d2cad581e SHA1 fd2ba806e6f3a55cee453cb25c86991b26a75dee SHA256 228b84722d87e88e7fdd36869e590e649ab523a0800a7d53df906498afe6f6f8
-EBUILD binutils-hppa64-2.19.1.ebuild 612 RMD160 b3b32fa400ac8f7e714a4fdfec6be8971a08db26 SHA1 ef8ef1075665fa6f5988f07614319388f778ea32 SHA256 2c25be2fe7bcd1e643bae01277d6e96e1ca9f9bec8c7508295938bba3263aa4e
-EBUILD binutils-hppa64-2.20.1.ebuild 612 RMD160 1c126bcb1834336a72f17f9ddb6f15a34ce78b05 SHA1 b42ff2495b9033b47d52d28f5be75161f07a41c0 SHA256 a480df2fad27473d25d455faabd2b44333b1ca5aa717484cf0361df0950eb2f4
-MISC ChangeLog 2611 RMD160 b49c6d864aa2dff85a8e808cfba3f98dbfcecb33 SHA1 f5e912ae7b2db9eacc9c3cc9fb62070bd5b26b6a SHA256 f8f3c240af96408db30a3385628140cd1704609b2fc62368a529c73e10e46fef
+DIST binutils-2.21.1-patches-1.0.tar.bz2 9168 RMD160 b475a318e371d550d01678da18ac8f4d58c149ec SHA1 1a835aa2ed8c268075a96b6694256410bfaf859d SHA256 f0c3ad8f984242dbc8a4f45b9594fb12dc9a45d348930038ac24c5726aafa716
+DIST binutils-2.21.1.tar.bz2 18890094 RMD160 1b36120beda5efddc3194ee56c3099421ca5ca07 SHA1 f188490772cc902ec44a76545887bff60dbfa22d SHA256 f769b64350a02fbee009e1582cc12b6ed43b41985de65effb741e258e075dd05
+EBUILD binutils-hppa64-2.19.1.ebuild 620 RMD160 8f7fa917fc5f066c70a47a0f8d3ada0a9b070caa SHA1 db86c436bcb4c9751ffcd86a3d6af705bd4964ad SHA256 8d6e9b80ed9e6d78604afda758bf9e7f7db6500c9f30abd661c2e8c6b02fb609
+EBUILD binutils-hppa64-2.20.1.ebuild 620 RMD160 1129f4e1d82d77f5f84144a5f587df2145e0b710 SHA1 6392c25640580a630a40527d673f8e0d28edc785 SHA256 d02621f147aef45e3249db989d336a2a90d69abd0b56e1f1bf008671527eb940
+EBUILD binutils-hppa64-2.21.1.ebuild 621 RMD160 b2ccf7aeec3601cc52070ea2d8a791dbeef1df25 SHA1 572f9fa49708f031e2e797dffa9118c629041639 SHA256 359d5f9cad192b903616254bfb78e66970557be176bec1ff8958db1c9ac4ede5
+MISC ChangeLog 2820 RMD160 9c137a82bfb6fa93b81b367199472d4b9de4ec15 SHA1 d5432315d852839167e46f80b2dbac84b4023552 SHA256 5ed14b70288c48c09b6249a1cdca2cef54596e359bb67508b451b8a6c0a7262f
 MISC metadata.xml 455 RMD160 4df71220e568cfa7297b13b51fefc6e7754f87c2 SHA1 ab404d3ef082550efd3d0d0b8e6fcf2c40233645 SHA256 30e1cffb2cd5aa01eb58c12cbb335c0cdf6dfa5a6c6b906906415c8cd49aa312
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk4fn54ACgkQVWmRsqeSphMXAQCeImpS8OrMN1mAQqY33AlH2+c4
+uRYAnR4mtA5aLPPkyhPYiApdIqKVERrU
+=wG3u
+-----END PGP SIGNATURE-----
