@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/binutils-hppa64/binutils-hppa64-2.20.1.ebuild,v 1.3 2010/09/17 17:41:51 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/binutils-hppa64/binutils-hppa64-2.20.1.ebuild,v 1.4 2011/07/15 02:01:55 jer Exp $
 
 export CTARGET=hppa64-${CHOST#*-}
 
@@ -11,6 +11,7 @@ inherit toolchain-binutils
 DESCRIPTION="binutils package for building 64bit kernels on HPPA"
 
 KEYWORDS="-* hppa"
+IUSE=""
 
 src_install() {
 	toolchain-binutils_src_install
