@@ -1,16 +1,16 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/binutils-hppa64/binutils-hppa64-2.19.1.ebuild,v 1.3 2011/07/15 02:01:55 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/binutils-hppa64/Attic/binutils-hppa64-2.21.1.ebuild,v 1.1 2011/07/15 02:01:55 jer Exp $
 
 export CTARGET=hppa64-${CHOST#*-}
 
-PATCHVER="1.2"
+PATCHVER="1.0"
 ELF2FLT_VER=""
 inherit toolchain-binutils
 
 DESCRIPTION="binutils package for building 64bit kernels on HPPA"
 
-KEYWORDS="-* hppa"
+KEYWORDS="-* ~hppa"
 IUSE=""
 
 src_install() {
