@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/binutils-hppa64
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/binutils-hppa64/ChangeLog,v 1.19 2010/09/17 17:41:51 jer Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/binutils-hppa64/ChangeLog,v 1.20 2011/07/15 02:01:55 jer Exp $
+
+*binutils-hppa64-2.21.1 (15 Jul 2011)
+
+  15 Jul 2011; Jeroen Roovers <jer@gentoo.org> binutils-hppa64-2.19.1.ebuild,
+  binutils-hppa64-2.20.1.ebuild, +binutils-hppa64-2.21.1.ebuild:
+  Version bump. Set IUSE.
 
   17 Sep 2010; Jeroen Roovers <jer@gentoo.org>
   binutils-hppa64-2.20.1.ebuild:
